# parallel-preprocessor

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile_bionic  Dockerfile_fedora  Dockerfile_focal  Doxyfile.in  Readme.md  index.html
.github/: pull_request_template.md
.github/workflows/: conda-ci.yml  docker-ci.yml  github-ci.yml
Geom/: BoundBoxBuilder.h  CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h  Geom.cpp  Geom.dox  GeometryMain.cpp  GeometryProcessor.h  GeometryPropertyBuilder.h  GeometryReader.h  GeometrySearchBuilder.h  GeometryTypes.h  GeometryWriter.h  OccUtils.cpp  OccUtils.h  OpenCascadeAll.cpp  Readme.md
PPP/: AbstractOperator.h  CommandLineProcessor.h  Context.cpp  CouplingMatrixBuilder.h  DataObject.h  DataStorage.h  Executor.h  ParallelAccessor.h  ParallelAccessorTest.cpp  Parameter.h  PreCompiled.h  ProcessorError.h  ProcessorResult.h  ProcessorTemplate.h  TypeDefs.h  Writer.h
PropertyContainer/: Property.h  PropertyContainerTest.cpp  Readme.md
cMake/: DetectOS.cmake  FindOpenCasCade.cmake  FindTBB.cmake  ppp_coverage_target.cmake  ppp_package.cmake
data/: part_in_group.FCStd  pppFreeCADpreprocessorTest.FCStd  pppFreeCADpreprocessorTest.json  sampleCoupledMatrix.mm
data/test_geometry/: test_bop_check.brep  test_cubes.stp  test_geometry.stp  test_geometry_manifest.json  test_interference.stp  test_overlap.stp  test_selfintersect.stp  test_weak_interference.brep
docker/: Dockerfile_centos  Dockerfile_ppp_openmc  Dockerfile_ssh  README.md  Readme.md  build_openmc_mpi.sh  build_ppp_openmc_mpi.sh  clean_docker_cache.sh  test_openmc_docker_image.sh
doxygen/html/: AbstractOperator_8h_source.html  AsynchronousDispatcher_8h_source.html  BaseClass_8cpp_source.html  BaseClass_8h_source.html  BoundBoxBuilder_8h_source.html  CollisionDetector_8cpp_source.html  CollisionDetector_8h_source.html  CommandLineProcessor_8h_source.html  ConsoleOperator_8h_source.html  Context_8cpp_source.html  Context_8h_source.html  CouplingMatrixBuilder_8h_source.html  DataObject_8h_source.html  DataStorage_8h_source.html  Executor_8h_source.html  Geom_8cpp_source.html  GeometryData_8h_source.html  GeometryImprinter_8h_source.html  GeometryMain_8cpp_source.html  GeometryOperatorProxy_8h_source.html  GeometryPipelineController_8h_source.html  GeometryProcessor_8h_source.html  GeometryPropertyBuilder_8h_source.html  GeometryReader_8h_source.html  GeometrySearchBuilder_8h_source.html  GeometryShapeChecker_8h_source.html  GeometryTypes_8h_source.html  GeometryWriter_8h_source.html  Logger_8cpp_source.html  Logger_8h_source.html  OccUtils_8cpp_source.html  OccUtils_8h_source.html  OpenCascadeAll_8cpp_source.html  OpenCascadeAll_8h_source.html  OperatorProxy_8h_source.html  ParallelAccessor_8h_source.html  Parameter_8h_source.html  PipelineController_8cpp_source.html  PipelineController_8h_source.html  PreCompiled_8cpp_source.html  (+455 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  (+83 more)
python/: analyzeDumpFiles.py  analyzeProcessedResult.py  detectFreeCAD.py  pppMonitorProgress.py  pppPipelineController.py  setup.py  test_fixing.py  test_imprint.py
recipe/: bld.bat  build.sh  meta.yaml
scripts/: generate_site.sh  run_all_tests.sh  site_generation.py
site/: clang_tidy.html  code-coverage.html  cppcheck.html  developer_documentation.html  doxygen-docs.html  flawfinder.html  simcpp.html
site/cppcheck/: index.html  stats.html
src/: CMakeLists.txt
src/Geom/: CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h  Geom.cpp  GeometryData.h  GeometryImprinter.h  GeometryMain.cpp  GeometryOperatorProxy.h  GeometryPipelineController.h  GeometryProcessor.h  GeometryPropertyBuilder.h  GeometryReader.h  GeometrySearchBuilder.h  GeometryShapeChecker.h  GeometryTypes.h  GeometryWriter.h  InscribedShapeBuilder.cpp  InscribedShapeBuilder.h  OccUtils.cpp  OccUtils.h  OpenCascadeAll.h  ProcessorSample.h  Readme.md
src/Geom/GeomTests/: CMakeLists.txt  GeomTests.cpp  UniqueIdValidator.cpp
src/PPP/: AsynchronousDispatcher.h  CMakeLists.txt  CommandLineProcessor.h  ConsoleOperator.h  Context.h  CouplingMatrixBuilder.h  DataObject.h  DataStorage.h  Executor.h  Logger.cpp  Logger.h  OperatorProxy.h  ParallelAccessor.h  PipelineController.cpp  PipelineController.h  PreCompiled.cpp  Processor.h  ProcessorError.h  ProcessorTemplate.h  Progressor.h  Reader.h  SparseMatrix.cpp  SparseMatrix.h  ThreadPoolExecutor.h  TypeDefs.h  UniqueId.h  Utilities.cpp  Utilities.h  WorkflowController.h  fs.h
src/PPP/CoreTests/: CMakeLists.txt  ParallelAccessorTest.cpp  ParallelTest.cpp  UtilitiesTest.cpp
src/PropertyContainer/: CMakeLists.txt  Property.h  PropertyContainer.hpp  PropertyContainerTest.cpp  Readme.md
src/python/: AppPy.cpp  CMakeLists.txt  FreeCADParser.py  GeomTestBase.py  analyzeDumpFiles.py  analyzeProcessedResult.py  detectFreeCAD.py  geomPipeline.py  pppMonitorProgress.py  pppPipelineController.py  pppStartPipeline.py  setup.py  test_collision.py  test_imprint.py  test_inscribedShape.py
src/test/: CMakeLists.txt  test_main.cpp
test/: CMakeLists.txt  GeomTests.cpp  OccBVHdemo.cpp  ThreadPoolTest.cpp  UniqueIdValidator.cpp
test/GeomTests/: CMakeLists.txt  GeomTests.cpp
wiki/: ArchitectureDesign.md  Benchmarking.md  BuildOnConda.md  BuildOnLinux.md  BuildOnMacOS.md  BuildOnWindows.md  CodeStructure.md  CompileOnLinux.md  CondaBuildGuide.md  Contribution.md  DeveloperGuide.md  Documentation.md  GetStarted.md  Installation.md  Packaging.md  ParallelDesign.md  PortToWindows.md  Roadmap.md  TechOverview.md  Testing.md
